--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@
 #loginButton{
     margin-top: 20px;
     width: 270px;
-    background-color: darkblue;
+    background-color: palevioletred;
     color: white;
     cursor: pointer;
 }
