--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@
 #loginButton{
     margin-top: 20px;
     width: 270px;
-    background-color: rgb(9, 243, 71);
+    background-color: yellow;
     color: white;
     cursor: pointer;
 }
