--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,9 @@
 }
 
 #loginButton{
+    background-color: red;
     margin-top: 20px;
     width: 270px;
-    background-color: yellow;
     color: white;
     cursor: pointer;
 }
